add page instansi and fix some other stuff

--- a/app/src/main/res/layout/activity_inovasi_detail.xml
+++ b/app/src/main/res/layout/activity_inovasi_detail.xml
@@ -410,22 +410,21 @@
                                             android:id="@+id/button_detail_inovator"
                                             android:layout_width="@dimen/_60sdp"
                                             android:layout_height="@dimen/_28sdp"
-                                            android:backgroundTint="@color/white"
+                                            android:backgroundTint="@color/green_smooth"
+                                            android:elevation="0dp"
                                             android:fontFamily="@font/monstserrat_semibold"
                                             android:text="@string/detail"
                                             android:textAlignment="center"
                                             android:textAllCaps="false"
-                                            android:textColor="@color/header_bg"
+                                            android:textColor="@color/white"
                                             android:textSize="@dimen/_8sdp"
-                                            app:borderWidth="0dp"
                                             app:elevation="0dp"
-                                            android:elevation="0dp"
-                                            app:strokeColor="@color/header_bg"
-                                            app:strokeWidth="1dp"
+                                            app:layout_constraintBottom_toBottomOf="parent"
+                                            app:layout_constraintEnd_toEndOf="parent"
+                                            app:layout_constraintHorizontal_bias="0.515"
                                             app:layout_constraintStart_toEndOf="@id/guideline23"
                                             app:layout_constraintTop_toBottomOf="@id/guideline24"
-                                            app:layout_constraintEnd_toEndOf="parent"
-                                            app:layout_constraintBottom_toBottomOf="parent"
+                                            app:layout_constraintVertical_bias="0.36"
                                             app:shapeAppearanceOverlay="@style/shapeButton" />
 
                                         <View
@@ -607,18 +606,16 @@
                                     android:id="@+id/button_detail_instansi"
                                     android:layout_width="@dimen/_60sdp"
                                     android:layout_height="@dimen/_28sdp"
-                                    android:backgroundTint="@color/white"
+                                    android:backgroundTint="@color/green_smooth"
                                     android:fontFamily="@font/monstserrat_semibold"
                                     android:text="@string/detail"
                                     android:textAlignment="center"
                                     android:textAllCaps="false"
-                                    android:textColor="@color/header_bg"
+                                    android:textColor="@color/white"
                                     android:textSize="@dimen/_8sdp"
                                     app:borderWidth="0dp"
                                     app:elevation="0dp"
                                     android:elevation="0dp"
-                                    app:strokeColor="@color/header_bg"
-                                    app:strokeWidth="1dp"
                                     app:layout_constraintStart_toStartOf="@id/tv_nama_instansi_det"
                                     app:layout_constraintTop_toBottomOf="@id/tv_nama_instansi_det"
                                     app:shapeAppearanceOverlay="@style/shapeButton" />
