--- a/app/src/main/res/layout/content_inovasi_layout.xml
+++ b/app/src/main/res/layout/content_inovasi_layout.xml
@@ -22,6 +22,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.02" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_image"
                 android:layout_width="@dimen/_48sdp"
@@ -31,7 +38,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.087"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="@id/guideline3">
 
                  <ImageView
                     android:id="@+id/iv_foto_inovasi"
@@ -58,7 +65,7 @@
                 android:textSize="@dimen/_10sdp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_nama_inovator"
                 app:layout_constraintStart_toEndOf="@id/card_image"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@id/guideline3"
                 app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
