--- a/app/src/main/res/layout/bottomsheet_kategori_inovasi.xml
+++ b/app/src/main/res/layout/bottomsheet_kategori_inovasi.xml
@@ -3,72 +3,97 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/black_opacity">
 
-    <TextView
-        android:layout_marginTop="@dimen/_10sdp"
-        android:id="@+id/text_kategori"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/monstserrat_semibold"
-        android:text="@string/kategori"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_16sdp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <com.github.captain_miao.optroundcardview.OptRoundCardView
+        android:id="@+id/cardViewInnerProductContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        app:optRoundCardCornerRadius="@dimen/_15sdp"
+        app:optRoundCardLeftBottomCorner="false"
+        app:optRoundCardRightBottomCorner="false"
+        app:optRoundCardBackgroundColor="@color/white">
 
-    <View
-        android:id="@+id/line"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_width="@dimen/_250sdp"
-        android:layout_height="0.1dp"
-        android:background="@color/gray_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_kategori"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/ani"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_100sdp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@id/line"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@id/line"
-        app:layout_constraintTop_toBottomOf="@id/line"
-        app:lottie_autoPlay="true"
-        app:lottie_fileName="44190-under-construction-1.json"
-        app:lottie_loop="true"/>
+            <ImageView
+                android:id="@+id/closeIv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="12dp"
+                android:src="@drawable/ic_baseline_close_24"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:tint="@color/black"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/_20sdp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ani" />
+            <TextView
+                android:id="@+id/kategori"
+                android:fontFamily="@font/monstserrat_semibold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_3sdp"
+                android:paddingStart="@dimen/_7sdp"
+                android:text="@string/kategori"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/divider"
+                app:layout_constraintTop_toTopOf="@id/closeIv" />
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray"
+                app:layout_constraintTop_toBottomOf="@id/closeIv" />
 
 
-    <!--<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:backgroundTint="@color/white"
-        android:elevation="0dp"
-        app:elevation="0dp"
-        android:text="@string/semua_kategori"
-        android:textAllCaps="false"
-        android:textSize="@dimen/_9sdp"
-        android:textAlignment="center"
-        android:textColor="@color/gray_text"
-        app:layout_constraintStart_toStartOf="@id/icon_category"
-        app:layout_constraintTop_toBottomOf="@id/text_kategori"
-        app:shapeAppearanceOverlay="@style/shapeButton"
-        app:strokeColor="@color/gray_text" />-->
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card_semuaKategori"
+                app:layout_constraintTop_toBottomOf="@id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_30sdp"
+                app:strokeColor="@color/gray"
+                app:cardCornerRadius="0dp"
+                app:cardElevation="0dp"
+                app:strokeWidth="1dp">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:text="@string/semua_kategori"
+                        android:textSize="@dimen/_10sdp"
+                        android:textColor="@color/black"
+                        android:padding="@dimen/_3sdp"
+                        android:paddingStart="@dimen/_7sdp"
+                        android:fontFamily="@font/montserrat_medium"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_list_kategori_inovasi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/card_semuaKategori"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_5sdp"
+                app:layout_constraintTop_toBottomOf="@id/rv_list_kategori_inovasi"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.github.captain_miao.optroundcardview.OptRoundCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
