--- a/app/src/main/res/layout/bottomsheet_kategori_inovasi.xml
+++ b/app/src/main/res/layout/bottomsheet_kategori_inovasi.xml
@@ -58,9 +58,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_30sdp"
                 app:strokeColor="@color/gray"
+                android:clickable="true"
+                android:foreground="@color/white_ripple"
                 app:cardCornerRadius="0dp"
                 app:cardElevation="0dp"
-                app:strokeWidth="1dp">
+                app:strokeWidth="1dp"
+                android:focusable="true">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
