--- a/app/src/main/res/layout/activity_search_inovasi.xml
+++ b/app/src/main/res/layout/activity_search_inovasi.xml
@@ -24,29 +24,16 @@
 
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchinovasi_src_text"
-               android:layout_width="@dimen/_200sdp"
+               android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                android:hint="@string/btn_text_inovasi_search"
+               android:textSize="@dimen/_10sdp"
                android:textColorHint="@color/gray_text"
                android:textColor="@color/gray_text"
                style="@style/customize_search"
                android:imeOptions="actionSearch"
                android:paddingStart="15dp"
                />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:layout_width="@dimen/_30sdp"
-                android:layout_height="@dimen/_30sdp"
-                android:layout_marginStart="15dp"
-                android:backgroundTint="@color/background"
-                app:elevation="0dp"
-                android:elevation="0dp"
-                app:borderWidth="0dp"
-                app:srcCompat="@drawable/ic_baseline_keyboard_voice_24"
-                app:fabCustomSize="@dimen/_30sdp"
-                app:maxImageSize="@dimen/_20sdp"
-                app:tint="@color/gray_text"/>
-
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -84,8 +71,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="304dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_30sdp"
         android:fontFamily="@font/monstserrat_semibold"
         android:text="@string/det_empty_search"
         android:textAlignment="center"
@@ -99,7 +86,7 @@
     <View
         android:id="@+id/bg_result_search"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/_30sdp"
         android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@id/d"
         app:layout_constraintStart_toStartOf="parent"
